@@ -301,6 +301,8 @@ C-API
 Library
 -------
 
+- Added a subtract() method to collections.Counter().
+
 - Issue #8233: When run as a script, py_compile.py optionally takes a single
   argument `-` which tells it to read files to compile from stdin.  Each line
   is read on demand and the named file is compiled immediately.  (Original
